--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,13 @@ flake8 = "^6.1.0"
 mypy = "^1.5.1"
 pytest = "^7.4.0"
 scikit-learn = "^1.4.1.post1"
+seaborn = "^0.13.2"
+pyarrow = "^15.0.2"
+fastparquet = "^2024.2.0"
 
+
+[tool.poetry.group.dev.dependencies]
+ipykernel = "^6.29.4"
 
 [build-system]
 requires = ["poetry-core"]
